--- a/webapp-react/src/App.css
+++ b/webapp-react/src/App.css
@@ -1,5 +1,18 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.detail-bg-img{
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  -webkit-mask-image: radial-gradient(circle at 30% 40%, white 0%, white 30%, transparent 70%);
+  mask-image: radial-gradient(circle at 30% 40%, white 0%, white 30%, transparent 70%);
+  -webkit-mask-position: center;
+  mask-position: center;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
 }
