--- a/webapp-react/src/App.css
+++ b/webapp-react/src/App.css
@@ -1,4 +1,4 @@
-:root{
+:root {
   --bg-color: rgb(5, 7, 9);
   --primary-color: #a8bbd0;
   --secondary-color: #385371;
@@ -9,7 +9,7 @@
   --vote-color: rgb(255, 196, 0);
 }
 
-.c-title{
+.c-title {
   font-family: 'Racing Sans One', sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -20,46 +20,68 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  max-width: 1600px;
 }
 
-body{
+body {
   min-width: 475px;
 }
 
-.navbar{
+.navbar {
   position: fixed;
+  padding: 24px 40px;
 }
 
-.nav-logo-cont{
+.nav-logo-cont {
   color: var(--text-color);
   font-size: 30px;
   font-family: "Fugaz One", sans-serif;
   transition: 0.2s;
 
-  &:hover{
+  &:hover {
     color: var(--usually-white);
     margin-left: 10px;
   }
 
-  &:active{
+  &:active {
     color: transparent;
   }
 }
 
-.jumbotron{
+.head-link {
+  text-decoration: none;
+  color: var(--text-color);
+  transition: 0.2s;
+  font-family: "Fugaz One", sans-serif;
+  font-weight: 200;
+
+  &:hover {
+    color: var(--primary-color);
+  }
+
+  &:active {
+    color: transparent;
+  }
+
+  p {
+    margin: 0;
+  }
+}
+
+.jumbotron {
   padding: 40px;
   color: var(--text-color);
 }
 
-.logotype-name{
+.logotype-name {
   margin-left: 7px;
 }
 
-.logotype-logo{
+.logotype-logo {
   margin-bottom: 4px;
 }
 
-.detail-bg-img{
+.detail-bg-img {
   height: 100%;
   width: 100%;
   object-fit: cover;
@@ -67,18 +89,18 @@ body{
   filter: blur(10px);
 }
 
-.main-detail{
+.main-detail {
   padding-top: 90px;
-  background: linear-gradient(180deg,rgba(56, 83, 113, 1) 0%, rgba(168, 187, 208, 1) 100%);
+  background: linear-gradient(180deg, rgba(56, 83, 113, 1) 0%, rgba(168, 187, 208, 1) 100%);
 }
 
-.main-home{
-  padding: 100px 0;
-  background: linear-gradient(180deg,rgba(56, 83, 113, 1) 0%, rgba(168, 187, 208, 1) 100%);
+.main-home {
+  padding: 100px 0 40px 0;
+  background: linear-gradient(180deg, rgba(56, 83, 113, 1) 0%, rgba(168, 187, 208, 1) 100%);
 
 }
 
-.details-btn{
+.details-btn {
   border: 3px solid transparent;
   color: var(--text-color);
   border-radius: 10px;
@@ -86,20 +108,20 @@ body{
   background-color: var(--secondary-color);
   transition: 0.2s;
 
-  &:hover{
+  &:hover {
     background-color: var(--usually-white);
     color: var(--secondary-color);
     border: 3px solid var(--secondary-color);
     margin-left: 5px;
   }
 
-  &:active{
+  &:active {
     color: var(--bg-color);
     border: 3px solid var(--bg-color);
   }
 }
 
-.discover-btn{
+.discover-btn {
   border: 3px solid transparent;
   color: var(--text-color);
   border-radius: 10px;
@@ -107,42 +129,42 @@ body{
   background-color: var(--secondary-color);
   transition: 0.2s;
 
-  &:hover{
+  &:hover {
     background-color: transparent;
     color: var(--usually-white);
     border: 3px solid var(--usually-white);
     margin-left: 5px;
   }
 
-  &:active{
+  &:active {
     color: var(--bg-color);
     border: 3px solid var(--bg-color);
   }
 }
 
-.container-buttons{
+.container-buttons {
   width: 100%;
-  padding: 0 40px;
+  padding: 40px;
 }
 
-.reviews-container{
+.reviews-container {
   margin: 0 auto;
   max-width: 650px;
   padding: 30px;
 
-  h2{
+  h2 {
     font-family: 'Fugaz One', sans-serif;
     color: var(--text-color);
     margin: 20px auto;
     font-size: 30px;
   }
 
-  .col-12{
+  .col-12 {
     padding: 5px 20px;
   }
 }
 
-.rev-card{
+.rev-card {
   background-color: var(--accent-color);
   border: 6px solid var(--usually-white);
   border-radius: 20px;
@@ -150,12 +172,12 @@ body{
   color: var(--text-color);
   transition: 0.25s;
 
-  &:hover{
+  &:hover {
     padding-top: 30px;
     padding-bottom: 30px;
   }
 
-  .rev-title{
+  .rev-title {
     width: 10px;
     font-size: 25px;
     font-family: 'Racing Sans One', sans-serif;
@@ -163,16 +185,16 @@ body{
     transition: 0.2s;
     cursor: pointer;
 
-    &:hover{
+    &:hover {
       color: var(--secondary-color);
     }
 
-    &:active{
+    &:active {
       color: transparent;
     }
   }
 
-  .propic-cont{
+  .propic-cont {
     background-color: var(--primary-color);
     border: 5px solid var(--text-color);
     border-radius: 50%;
@@ -181,34 +203,78 @@ body{
     cursor: pointer;
     margin-left: 15px;
 
-    &:hover{
+    &:hover {
       border: 5px solid var(--secondary-color);
       background-color: var(--secondary-color);
     }
 
-    .rev-propic{
+    .rev-propic {
       font-size: 40px;
     }
   }
 }
 
-.rev-card-body{
+.rev-card-body {
 
-  .rev-pre{
+  .rev-pre {
     font-weight: 700;
     color: var(--primary-color);
   }
 
-  .review{
+  .review {
     font-style: italic;
   }
 
-  .vote{
+  .vote {
     color: var(--vote-color);
   }
 
 }
 
-footer{
+.form-review {
+  margin: 0px 50px;
+  padding: 30px;
+  border: 7px solid var(--usually-white);
+  border-radius: 20px;
+  background-color: var(--secondary-color);
+  font-family: 'Fugaz One', sans-serif;;
+
+  h2 {
+    width: 360px;
+    font-size: 25px;
+    font-family: 'Racing Sans One', sans-serif;
+    margin-bottom: 15px;
+    color: var(--usually-white);
+  }
+
+  label {
+    color: var(--text-color);
+  }
+
+  .vote-input {
+    width: 60px;
+  }
+
+  .submit-btn {
+    padding: 8px 15px;
+    border-radius: 12px;
+    border: 3px solid var(--accent-color);
+    background-color: var(--accent-color);
+    color: var(--text-color);
+    transition: 0.2s;
+
+    &:hover {
+      border: 3px solid var(--text-color);
+      background-color: transparent;
+    }
+
+    &:active{
+      border: 3px solid transparent;
+      color: transparent;
+    }
+  }
+}
+
+footer {
   background-color: var(--primary-color);
 }
